--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600&display=swap");
+
+
